# aiogram3-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_OPTIMIZATION.md  bot.py  main.py  pyproject.toml  requirements.txt
tgbot/: config.py  constants.py  states.py
tgbot/filters/: admin.py  group.py
tgbot/handlers/: admin.py  group.py  users.py
tgbot/keyboards/: __init__.py  factory.py  inline.py  reply.py
tgbot/middlewares/: __init__.py  db.py  error_handler.py  throttling.py
tgbot/misc/: slope_tempalte.py
tgbot/models/: models.py
tgbot/services/: __init__.py  admin_service.py  base_service.py  cache_service.py  database.py  user_service.py
tgbot/utils/: __init__.py  validators.py
