[tool.poetry]
name = "post-terminal"
version = "0.1.0"
description = ""
authors = ["jakha921 <jakha921@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "24.1.0"
aiogram = "3.18.0"
aiohappyeyeballs = "2.4.6"
aiohttp = "3.11.13"
aiosignal = "1.3.2"
annotated-types = "0.7.0"
async-timeout = "5.0.1"
asyncpg = "0.30.0"
attrs = "25.1.0"
certifi = "2025.1.31"
frozenlist = "1.5.0"
greenlet = "3.1.1"
idna = "3.10"
loguru = "0.7.3"
magic-filter = "1.0.12"
multidict = "6.1.0"
propcache = "0.3.0"
pydantic = "2.10.6"
pydantic-core = "2.27.2"
sqlalchemy = "2.0.38"
typing-extensions = "4.12.2"
yarl = "1.18.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
